source/scss/header.scss
header#main {
    height: 3.75rem;
    margin-left: 300px;
    box-shadow: 0 0.125rem 0.625rem $header-box-shadow;
    background: $header-background;
    color: $header-color;
    position: sticky;
    top: 0;
    
    form {
        width: 85%;
        float: left;
        line-height: 3.7rem;
        
        i {
            padding-left: 15px;
            line-height: 4 !important;
            float: left;
            color: $header-input-color;
        }
        
        input {
            height: auto;
            padding: .4375rem .75rem;
            font-size: .8125rem;
            line-height: 3.5;
            color: $header-color;
            font-weight: 300;
            border: 0;
            box-shadow: none;
            width: 93%;
            float: left;
            
            &::placeholder {
                color: $header-input-color;
            }
        }
    }
    
    ul {
        float: right;
        width: 15%;
        line-height: 2.45rem;
        
        li {
            display: inline-block;
            border-left: 1px solid $header-border-link;
            padding:  0.6667rem;
            
            &#notif {
                width: 30px;
                text-align: center;
                
                i {
                    color: $header-notification-icon-color;
                }
            }
            
            &#profile {
            
            }
        }
    }
}

